test/spec_vectors/simd_i8x16_cmp/fail/module_27.wat
(module (func $i8x16.gt_u-arg-empty (result v128) (i8x16.gt_u)))